--- a/cliente/package.json
+++ b/cliente/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
+    "framer-motion": "^4.1.17",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
@@ -53,6 +54,9 @@
     ]
   },
   "react-dotenv": {
-    "whitelist": ["BASE_URL","API_KEY"]
+    "whitelist": [
+      "BASE_URL",
+      "API_KEY"
+    ]
   }
 }
