--- a/cliente/package.json
+++ b/cliente/package.json
@@ -20,6 +20,7 @@
     "react-dotenv": "^0.1.3",
     "react-dropzone": "^11.4.2",
     "react-hook-form": "^7.16.0",
+    "react-hot-toast": "^2.1.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.1.0",
