--- a/cliente/package.json
+++ b/cliente/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.1.0",
+    "recoil": "^0.5.2",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1",
     "xlsx": "^0.17.3",
