--- a/servidor/composer.json
+++ b/servidor/composer.json
@@ -8,7 +8,8 @@
         }
     ],
     "require": {
-        "vlucas/phpdotenv": "^5.3"
+        "vlucas/phpdotenv": "^5.3",
+        "phpoffice/phpspreadsheet": "^1.21"
     },
     "autoload": {
         "psr-4": {
