--- a/cliente/package.json
+++ b/cliente/package.json
@@ -3,32 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
-    "@hookform/resolvers": "^2.8.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.4",
-    "bootstrap": "^5.1.1",
-    "framer-motion": "^4.1.17",
-    "normalize.css": "^8.0.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-rc.0",
-    "react-dom": "^17.0.2",
-    "react-dotenv": "^0.1.3",
-    "react-dropzone": "^11.4.2",
-    "react-hook-form": "^7.16.0",
-    "react-hot-toast": "^2.1.1",
-    "react-router-dom": "^5.3.0",
+    "@fortawesome/fontawesome-svg-core": "1.2.36",
+    "@fortawesome/free-solid-svg-icons": "5.15.4",
+    "@fortawesome/react-fontawesome": "0.1.15",
+    "@hookform/resolvers": "2.8.1",
+    "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/react": "11.1.0",
+    "@testing-library/user-event": "12.1.10",
+    "axios": "0.21.4",
+    "bootstrap": "5.1.1",
+    "framer-motion": "4.1.17",
+    "normalize.css": "8.0.1",
+    "react": "17.0.2",
+    "react-bootstrap": "2.0.0-rc.0",
+    "react-dom": "17.0.2",
+    "react-dotenv": "0.1.3",
+    "react-dropzone": "11.4.2",
+    "react-hook-form": "7.16.0",
+    "react-hot-toast": "2.1.1",
+    "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
-    "react-select": "^5.1.0",
-    "recoil": "^0.5.2",
-    "styled-components": "^5.3.1",
-    "web-vitals": "^1.0.1",
-    "xlsx": "^0.17.3",
-    "yup": "^0.32.9"
+    "react-select": "5.1.0",
+    "recoil": "0.5.2",
+    "styled-components": "5.3.1",
+    "web-vitals": "1.0.1",
+    "xlsx": "0.17.3",
+    "yup": "0.32.9"
   },
   "scripts": {
     "start": "react-dotenv && react-scripts start",
@@ -44,7 +44,7 @@
     ]
   },
   "resolutions": {
-    "styled-components": "^5"
+    "styled-components": "5"
   },
   "browserslist": {
     "production": [
