--- a/cliente/package.json
+++ b/cliente/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cliente",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.36",
@@ -61,7 +61,8 @@
   "react-dotenv": {
     "whitelist": [
       "BASE_URL",
-      "API_KEY"
+      "API_KEY",
+      "SUB_HOST"
     ]
   }
 }
