--- a/cliente/package.json
+++ b/cliente/package.json
@@ -2,6 +2,7 @@
   "name": "cliente",
   "version": "1.0.0",
   "private": true,
+  "homepage": "http://cuerpobomberos.gob.sv/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.36",
     "@fortawesome/free-solid-svg-icons": "5.15.4",
