--- a/cliente/package.json
+++ b/cliente/package.json
@@ -2,7 +2,6 @@
   "name": "cliente",
   "version": "1.0.0",
   "private": true,
-  "homepage": "http://cuerpobomberos.gob.sv/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.36",
     "@fortawesome/free-solid-svg-icons": "5.15.4",
@@ -22,6 +21,7 @@
     "react-dropzone": "11.4.2",
     "react-hook-form": "7.16.0",
     "react-hot-toast": "2.1.1",
+    "react-router-cache-route": "^1.12.1",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "5.1.0",
